Bug #115349 --> Mozilla doesn't properly handle IMAP logout / connection closes (RFC2060)