mozilla/mailnews/imap/src/nsImapProtocol.cpp
@@ -802,6 +802,7 @@ nsresult nsImapProtocol::SetupWithUrl(nsIURI * aURL, nsISupports* aConsumer)
           // open buffered, blocking output stream
           rv = m_transport->OpenOutputStream(nsITransport::OPEN_BLOCKING, 0, 0, getter_AddRefs(m_outputStream));
           if (NS_FAILED(rv)) return rv;
+          SetFlag(IMAP_CONNECTION_IS_OPEN);
         }
       }
     } // if m_runningUrl
@@ -994,28 +995,18 @@ nsImapProtocol::TellThreadToDie(PRBool isSafeToClose)
                 nsImapServerResponseParser::kFolderSelected && isSafeToClose;
   nsCString command;
   nsresult rv = NS_OK;
-  PRUint32 writeCount;
 
   if (m_currentServerCommandTagNumber > 0)
   {
     if (closeNeeded && GetDeleteIsMoveToTrash() &&
         TestFlag(IMAP_CONNECTION_IS_OPEN) && m_outputStream)
     {
-      IncrementCommandTagNumber();
-      command = GetServerCommandTag();
-      command.Append(" close" CRLF);
-      rv = m_outputStream->Write(command.get(), command.Length(),
-                                 &writeCount);
-      Log("SendData", "TellThreadToDie", command.get());
+      Close();
     }
 
     if (NS_SUCCEEDED(rv) && TestFlag(IMAP_CONNECTION_IS_OPEN) && m_outputStream)
     {
-      IncrementCommandTagNumber();
-      command = GetServerCommandTag();
-      command.Append(" logout" CRLF);
-      rv = m_outputStream->Write(command.get(), command.Length(),
-                                 &writeCount);
+      Logout();
       Log("SendData", "TellThreadToDie", command.get());
     }
   }
@@ -5318,7 +5309,7 @@ void nsImapProtocol::Logout()
   ProgressEventFunctionUsingId (IMAP_STATUS_LOGGING_OUT);
 
 /******************************************************************
- * due to the undo functionality we cannot issule a close when logout; there
+ * due to the undo functionality we cannot issue a close when logout; there
  * is no way to do an undo if the message has been permanently expunge
  * jt - 07/12/1999
 
